--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -2,8 +2,8 @@ unbind-key C-b
 set-option -g prefix C-z
 bind-key C-z send-prefix
 
-
 set-option -g base-index 1
+set-option -g default-command "reattach-to-user-namespace -l bash"
 set-option -g default-path $HOME
 set-option -g default-terminal screen-256color
 set-option -g history-limit 10000
