--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -2,6 +2,9 @@ unbind-key C-b
 set-option -g prefix C-z
 bind-key C-z send-prefix
 
+bind-key C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+bind-key C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+
 set-option -g base-index 1
 set-option -g default-command "reattach-to-user-namespace -l bash"
 set-option -g default-path $HOME
