--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -12,5 +12,6 @@ set-option -g history-limit 10000
 set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
+set-option -g renumber-windows on
 
 set-window-option -g mode-mouse on
