--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -1,17 +1,33 @@
+# change prefix key to C-z
 unbind-key C-b
 set-option -g prefix C-z
 bind-key C-z send-prefix
 
+# bind prefix + C-r to reloading .tmux.conf
+bind-key C-r source-file ~/.tmux.conf\; display "reload ~/.tmux.conf"
+
+# enable utf8
+set-window-option -g utf8 on
+set-option -g status-utf8 on
+
+# settings for clipboard integration for mac
+set-option -g default-command "reattach-to-user-namespace -l bash"
 bind-key C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 bind-key C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
-set-option -g base-index 1
-set-option -g default-command "reattach-to-user-namespace -l bash"
-set-option -g default-terminal screen-256color
-set-option -g history-limit 10000
+# enable mouse
+set-window-option -g mode-mouse on
 set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
+
+# misc settings
+set-option -g base-index 1
+set-option -g default-terminal screen-256color
+set-option -g history-limit 10000
 set-option -g renumber-windows on
 
-set-window-option -g mode-mouse on
+#set-option -g status-bg cyan
+#set-option -g status-fg black
+#set -g pane-active-border-fg cyan
+#set -g pane-active-border-bg black
