add setting for status line

--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -21,6 +21,11 @@ set-option -g mouse-resize-pane on
 set-option -g mouse-select-pane on
 set-option -g mouse-select-window on
 
+# setting for status line
+set-option -g status-left ""
+set-option -g status-right "#{=50:pane_title} %Y/%m/%d %H:%M" # 50(title part) + 1(space) + 16(date time part)
+set-option -g status-right-length 67
+
 # misc settings
 set-option -g base-index 1
 set-option -g default-terminal screen-256color
