add if-shell for clipboard integration

--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -11,9 +11,9 @@ set-window-option -g utf8 on
 set-option -g status-utf8 on
 
 # settings for clipboard integration for mac
-set-option -g default-command "reattach-to-user-namespace -l bash"
-bind-key C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
-bind-key C-v run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+if-shell "test \"`uname`\" = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
+if-shell "test \"`uname`\" = \"Darwin\"" "bind-key C-c run \"tmux save-buffer - | reattach-to-user-namespace pbcopy\""
+if-shell "test \"`uname`\" = \"Darwin\"" "bind-key C-v run \"reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer\""
 
 # enable mouse
 set-window-option -g mode-mouse on
