update .tmux.conf for tmux2.2 https://github.com/tmux/tmux/blob/2.2/CHANGES

--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -6,20 +6,13 @@ bind-key C-z send-prefix
 # bind prefix + C-r to reloading .tmux.conf
 bind-key C-r source-file ~/.tmux.conf\; display "reload ~/.tmux.conf"
 
-# enable utf8
-set-window-option -g utf8 on
-set-option -g status-utf8 on
-
 # settings for clipboard integration for mac
 if-shell "test \"`uname`\" = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
 if-shell "test \"`uname`\" = \"Darwin\"" "bind-key C-c run \"tmux save-buffer - | reattach-to-user-namespace pbcopy\""
 if-shell "test \"`uname`\" = \"Darwin\"" "bind-key C-v run \"reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer\""
 
 # enable mouse
-set-window-option -g mode-mouse on
-set-option -g mouse-resize-pane on
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
+set-window-option -g mouse on
 
 # setting for status line
 set-option -g status-left ""
