--- a/dotfile/.tmux.conf
+++ b/dotfile/.tmux.conf
@@ -7,7 +7,9 @@ bind-key C-z send-prefix
 bind-key C-r source-file ~/.tmux.conf\; display "reload ~/.tmux.conf"
 
 # settings for clipboard integration for mac
-if-shell "test \"`uname`\" = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
+if-shell "test \"`uname -sr`\" = \"Darwin 18.7.0\"" "set-option -g default-command \"reattach-to-user-namespace -l bash\""
+if-shell "test \"`uname -sr`\" = \"Darwin 19.5.0\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
+if-shell "test \"`uname`\" = \"Darwin\"" "set-option -g default-command \"reattach-to-user-namespace -l zsh\""
 if-shell "test \"`uname`\" = \"Darwin\"" "bind-key C-c run \"tmux save-buffer - | reattach-to-user-namespace pbcopy\""
 if-shell "test \"`uname`\" = \"Darwin\"" "bind-key C-v run \"reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer\""
 
